# networkportal

./: README.md  docker-compose.yml
backend/: Dockerfile  docker-compose.yml  pyproject.toml
backend/app/: database.py  main.py  models.py  schemas.py
backend/app/routers/: ports.py  users.py
backend/app/utils/: deps.py  jwt.py
frontend/: Dockerfile  docker-compose.yml  nginx.conf  package-lock.json  package.json
frontend/src/: App.vue  main.ts
frontend/src/components/: AddPortForm.vue  LoginForm.vue  Navbar.vue  PortItem.vue  PortList.vue  SignupForm.vue
frontend/src/pages/: Home.vue  Login.vue  Ports.vue  Signup.vue
frontend/src/router/: index.ts
frontend/src/utils/: api.ts  auth.ts
